--- a/app/src/main/res/layout/activity_listview.xml
+++ b/app/src/main/res/layout/activity_listview.xml
@@ -21,5 +21,5 @@
         android:id="@+id/listView"
         android:layout_below="@+id/buttonGet"
         android:layout_alignParentStart="true" />
-
+        <!-- android:background="@color/listView_background"-->
 </RelativeLayout>
