--- a/app/src/main/res/layout/activity_kund.xml
+++ b/app/src/main/res/layout/activity_kund.xml
@@ -35,4 +35,13 @@
         android:layout_height="fill_parent"
         android:layout_below="@id/tab_layout"/>
 
+    <Button
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Spara"
+        android:id="@+id/spara"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true" />
+
 </RelativeLayout>
