--- a/app/src/main/res/layout/tab_fragment1_kund.xml
+++ b/app/src/main/res/layout/tab_fragment1_kund.xml
@@ -7,17 +7,6 @@
     tools:context="com.venovu.energiklart.Tab_Fragment1_Kund">
 
 
-    <EditText
-        android:layout_width="400dp"
-        android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:hint="Mäklare"
-        android:ems="10"
-        android:id="@+id/broker"
-        android:layout_marginTop="100dp"
-        android:layout_alignParentStart="true" />
-    
-
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
@@ -41,9 +30,8 @@
         android:hint="Ägarens namn"
         android:ems="10"
         android:id="@+id/name"
-        android:layout_below="@+id/broker"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="40dp" />
+        android:layout_below="@+id/view"
+        android:layout_alignParentStart="true" />
 
     <EditText
         android:layout_width="400dp"
@@ -101,8 +89,7 @@
         android:hint="Telefonnummer"
         android:ems="10"
         android:id="@+id/phone"
-        android:layout_below="@+id/view"
-        android:layout_marginTop="30dp"
+        android:layout_below="@+id/cell"
         android:layout_alignParentEnd="true" />
 
     <EditText
@@ -112,8 +99,8 @@
         android:hint="Mobiltelefon"
         android:ems="10"
         android:id="@+id/cell"
-        android:layout_alignBottom="@+id/name"
-        android:layout_alignEnd="@+id/phone" />
+        android:layout_below="@+id/view"
+        android:layout_alignParentEnd="true" />
 
     <EditText
         android:layout_width="400dp"
@@ -122,7 +109,7 @@
         android:hint="E-post"
         android:ems="10"
         android:id="@+id/mail"
-        android:layout_alignBottom="@+id/ssn"
+        android:layout_below="@+id/phone"
         android:layout_alignParentEnd="true" />
 
     <EditText
@@ -130,25 +117,8 @@
         android:layout_height="wrap_content"
         android:hint="Fakturaadress"
         android:id="@+id/fakturaAd"
-        android:layout_above="@+id/adress"
+        android:layout_below="@+id/mail"
         android:layout_alignParentEnd="true" />
-
-    <Button
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Spara"
-        android:id="@+id/save"
-        android:layout_alignBottom="@+id/adress"
-        android:layout_alignParentEnd="true" />
-
-    <CheckBox
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Mäklare betalar"
-        android:id="@+id/brokerPay"
-        android:layout_alignTop="@+id/adress"
-        android:layout_alignStart="@+id/fakturaAd" />
 
     <CheckBox
         android:layout_width="wrap_content"
@@ -156,15 +126,15 @@
         android:text="Fått BG"
         android:id="@+id/checkBox3"
         android:layout_below="@+id/adress"
-        android:layout_alignStart="@+id/brokerPay" />
+        android:layout_alignStart="@+id/fakturaAd" />
 
     <CheckBox
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Faktura 30 dagar"
         android:id="@+id/checkBox4"
-        android:layout_alignTop="@+id/checkBox5"
-        android:layout_toStartOf="@+id/save" />
+        android:layout_below="@+id/postNr"
+        android:layout_alignStart="@+id/checkBox5" />
 
     <CheckBox
         android:layout_width="wrap_content"
@@ -173,5 +143,15 @@
         android:id="@+id/checkBox5"
         android:layout_alignTop="@+id/postNr"
         android:layout_alignStart="@+id/checkBox3" />
+
+    <Button
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Spara"
+        android:id="@+id/save"
+        android:layout_alignTop="@+id/checkBox4"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="52dp" />
 
 </RelativeLayout>
