--- a/app/src/main/res/layout/tab_fragment2_kund.xml
+++ b/app/src/main/res/layout/tab_fragment2_kund.xml
@@ -71,14 +71,13 @@
         android:layout_alignParentStart="true"
         android:layout_marginBottom="43dp"
         android:id="@+id/radioGroup2">
-        
-        <RadioButton
-            android:layout_width="wrap_content"
-            android:layout_height="50dp"
-            android:text="Ja"
-            android:id="@+id/energibesparande_ja"
-            android:checked="false" />
 
+        <CheckBox
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Ja/Nej"
+            android:id="@+id/energibespar"
+            android:checked="false" />
     </RadioGroup>
 
     <RadioGroup
