--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -15,7 +15,7 @@
         android:inputType="textPersonName"
         android:hint="Användarnamn"
         android:ems="10"
-        android:id="@+id/editText"
+        android:id="@+id/user_create"
         android:layout_marginTop="128dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
@@ -26,9 +26,9 @@
         android:inputType="textEmailAddress"
         android:hint="Email"
         android:ems="10"
-        android:id="@+id/editText2"
-        android:layout_below="@+id/editText"
-        android:layout_alignStart="@+id/editText"
+        android:id="@+id/email_create"
+        android:layout_below="@+id/user_create"
+        android:layout_alignStart="@+id/user_create"
         android:layout_marginTop="40dp" />
 
     <EditText
@@ -37,9 +37,9 @@
         android:inputType="phone"
         android:hint="Telefonnummer"
         android:ems="10"
-        android:id="@+id/editText3"
-        android:layout_below="@+id/editText2"
-        android:layout_alignStart="@+id/editText2"
+        android:id="@+id/phone_create"
+        android:layout_below="@+id/email_create"
+        android:layout_alignStart="@+id/email_create"
         android:layout_marginTop="40dp" />
 
     <EditText
@@ -48,18 +48,18 @@
         android:inputType="textPassword"
         android:hint="Lösenord"
         android:ems="10"
-        android:id="@+id/editText4"
-        android:layout_below="@+id/editText3"
-        android:layout_alignStart="@+id/editText3"
+        android:id="@+id/password_create"
+        android:layout_below="@+id/phone_create"
+        android:layout_alignStart="@+id/phone_create"
         android:layout_marginTop="40dp" />
 
     <Button
         android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:text="Skapa"
-        android:id="@+id/button"
-        android:layout_below="@+id/editText4"
-        android:layout_alignStart="@+id/editText4"
+        android:id="@+id/create_button"
+        android:layout_below="@+id/password_create"
+        android:layout_alignStart="@+id/password_create"
         android:layout_marginTop="70dp" />
 
     <TextView
@@ -70,6 +70,6 @@
         android:id="@+id/textView12"
         android:textSize="30dp"
         android:layout_alignParentTop="true"
-        android:layout_alignStart="@+id/editText"
+        android:layout_alignStart="@+id/create_button"
         android:layout_marginTop="40dp" />
 </RelativeLayout>
