--- a/app/src/main/res/layout/tab_fragment4_kund.xml
+++ b/app/src/main/res/layout/tab_fragment4_kund.xml
@@ -137,4 +137,13 @@
         android:layout_alignTop="@+id/bqJa"
         android:layout_alignEnd="@+id/textView9" />
 
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="New Button"
+        android:id="@+id/testButton"
+        android:layout_below="@+id/bränsle"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="78dp" />
+
 </RelativeLayout>
