Implemented onClick in ListView. Test function (print in console) to show id and position of list item that has been pressed

--- a/app/src/main/res/layout/fragment_blank.xml
+++ b/app/src/main/res/layout/fragment_blank.xml
@@ -39,6 +39,7 @@
         android:layout_below="@+id/buttonKund"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="79dp"
-        android:id="@+id/buttonRond" />
+        android:id="@+id/buttonRond"
+        android:visibility="invisible"/>
 
 </RelativeLayout>
